Harden Türk Radyo WebView bridge for minSdk 26